stage3/3B/Stage3BParser.ts

import * as antlr from "antlr4ng";
import { Token } from "antlr4ng";

import { Stage3BListener } from "./Stage3BListener.js";
// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;


export class Stage3BParser extends antlr.Parser {
    public static readonly COMMENT = 1;
    public static readonly LPAREN = 2;
    public static readonly RPAREN = 3;
    public static readonly COMMA = 4;
    public static readonly PROGRAM = 5;
    public static readonly LETSTAR = 6;
    public static readonly LET = 7;
    public static readonly LAMBDA = 8;
    public static readonly DEF = 9;
    public static readonly DEFMACRO = 10;
    public static readonly IF = 11;
    public static readonly WHILE = 12;
    public static readonly BEGIN = 13;
    public static readonly RETURN = 14;
    public static readonly SET = 15;
    public static readonly TERNARY = 16;
    public static readonly COND = 17;
    public static readonly OBJECT = 18;
    public static readonly ARRAY = 19;
    public static readonly OPTCHAIN = 20;
    public static readonly DOT = 21;
    public static readonly INDEX = 22;
    public static readonly NULLCOAL = 23;
    public static readonly QUASI = 24;
    public static readonly QUOTE = 25;
    public static readonly UNQUOTE_SPLICING = 26;
    public static readonly UNQUOTE = 27;
    public static readonly NEW = 28;
    public static readonly THROW = 29;
    public static readonly IMPORT = 30;
    public static readonly BOOLEAN = 31;
    public static readonly NULL = 32;
    public static readonly UNDEFINED = 33;
    public static readonly LBRACK = 34;
    public static readonly RBRACK = 35;
    public static readonly KEYWORD = 36;
    public static readonly NUMBER = 37;
    public static readonly STRING = 38;
    public static readonly MULTILINE_STRING = 39;
    public static readonly IDENTIFIER = 40;
    public static readonly WS = 41;
    public static readonly RULE_program = 0;
    public static readonly RULE_topLevel = 1;
    public static readonly RULE_defmacro = 2;
    public static readonly RULE_def = 3;
    public static readonly RULE_statement = 4;
    public static readonly RULE_letStar = 5;
    public static readonly RULE_letStmt = 6;
    public static readonly RULE_ifForm = 7;
    public static readonly RULE_whileForm = 8;
    public static readonly RULE_block = 9;
    public static readonly RULE_returnForm = 10;
    public static readonly RULE_throwForm = 11;
    public static readonly RULE_importForm = 12;
    public static readonly RULE_binding = 13;
    public static readonly RULE_expression = 14;
    public static readonly RULE_lambda = 15;
    public static readonly RULE_assign = 16;
    public static readonly RULE_ternary = 17;
    public static readonly RULE_condExpr = 18;
    public static readonly RULE_newForm = 19;
    public static readonly RULE_objectExpr = 20;
    public static readonly RULE_objectField = 21;
    public static readonly RULE_arrayExpr = 22;
    public static readonly RULE_propAccess = 23;
    public static readonly RULE_indexAccess = 24;
    public static readonly RULE_quasiquote = 25;
    public static readonly RULE_unquote = 26;
    public static readonly RULE_unquoteSplicing = 27;
    public static readonly RULE_optChain = 28;
    public static readonly RULE_nullCoalesce = 29;
    public static readonly RULE_call = 30;
    public static readonly RULE_fnSignature = 31;
    public static readonly RULE_param = 32;
    public static readonly RULE_literal = 33;

    public static readonly literalNames = [
        null, null, "'('", "')'", "','", "'program'", "'let*'", "'let'", 
        "'lambda'", "'def'", "'defmacro'", "'if'", "'while'", "'begin'", 
        "'return'", "'set!'", "'ternary'", "'cond'", "'object'", "'array'", 
        "'.?'", "'.'", "'index'", "'??'", "'quasi'", "'quote'", "'unquote-splicing'", 
        "'unquote'", "'new'", "'throw'", "'import'", null, "'null'", "'undefined'", 
        "'['", "']'"
    ];

    public static readonly symbolicNames = [
        null, "COMMENT", "LPAREN", "RPAREN", "COMMA", "PROGRAM", "LETSTAR", 
        "LET", "LAMBDA", "DEF", "DEFMACRO", "IF", "WHILE", "BEGIN", "RETURN", 
        "SET", "TERNARY", "COND", "OBJECT", "ARRAY", "OPTCHAIN", "DOT", 
        "INDEX", "NULLCOAL", "QUASI", "QUOTE", "UNQUOTE_SPLICING", "UNQUOTE", 
        "NEW", "THROW", "IMPORT", "BOOLEAN", "NULL", "UNDEFINED", "LBRACK", 
        "RBRACK", "KEYWORD", "NUMBER", "STRING", "MULTILINE_STRING", "IDENTIFIER", 
        "WS"
    ];
    public static readonly ruleNames = [
        "program", "topLevel", "defmacro", "def", "statement", "letStar", 
        "letStmt", "ifForm", "whileForm", "block", "returnForm", "throwForm", 
        "importForm", "binding", "expression", "lambda", "assign", "ternary", 
        "condExpr", "newForm", "objectExpr", "objectField", "arrayExpr", 
        "propAccess", "indexAccess", "quasiquote", "unquote", "unquoteSplicing", 
        "optChain", "nullCoalesce", "call", "fnSignature", "param", "literal",
    ];

    public get grammarFileName(): string { return "Stage3B.g4"; }
    public get literalNames(): (string | null)[] { return Stage3BParser.literalNames; }
    public get symbolicNames(): (string | null)[] { return Stage3BParser.symbolicNames; }
    public get ruleNames(): string[] { return Stage3BParser.ruleNames; }
    public get serializedATN(): number[] { return Stage3BParser._serializedATN; }

    protected createFailedPredicateException(predicate?: string, message?: string): antlr.FailedPredicateException {
        return new antlr.FailedPredicateException(this, predicate, message);
    }

    public constructor(input: antlr.TokenStream) {
        super(input);
        this.interpreter = new antlr.ParserATNSimulator(this, Stage3BParser._ATN, Stage3BParser.decisionsToDFA, new antlr.PredictionContextCache());
    }
    public program(): ProgramContext {
        let localContext = new ProgramContext(this.context, this.state);
        this.enterRule(localContext, 0, Stage3BParser.RULE_program);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 68;
            this.match(Stage3BParser.LPAREN);
            this.state = 69;
            this.match(Stage3BParser.PROGRAM);
            this.state = 73;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 2 || _la === 31 || ((((_la - 32)) & ~0x1F) === 0 && ((1 << (_la - 32)) & 371) !== 0)) {
                {
                {
                this.state = 70;
                this.topLevel();
                }
                }
                this.state = 75;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 76;
            this.match(Stage3BParser.RPAREN);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public topLevel(): TopLevelContext {
        let localContext = new TopLevelContext(this.context, this.state);
        this.enterRule(localContext, 2, Stage3BParser.RULE_topLevel);
        try {
            this.state = 81;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 1, this.context) ) {
            case 1:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 78;
                this.defmacro();
                }
                break;
            case 2:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 79;
                this.def();
                }
                break;
            case 3:
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 80;
                this.statement();
                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public defmacro(): DefmacroContext {
        let localContext = new DefmacroContext(this.context, this.state);
        this.enterRule(localContext, 4, Stage3BParser.RULE_defmacro);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 83;
            this.match(Stage3BParser.LPAREN);
            this.state = 84;
            this.match(Stage3BParser.DEFMACRO);
            this.state = 85;
            this.match(Stage3BParser.IDENTIFIER);
            this.state = 86;
            this.fnSignature();
            this.state = 90;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 2 || _la === 31 || ((((_la - 32)) & ~0x1F) === 0 && ((1 << (_la - 32)) & 371) !== 0)) {
                {
                {
                this.state = 87;
                this.statement();
                }
                }
                this.state = 92;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 93;
            this.match(Stage3BParser.RPAREN);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public def(): DefContext {
        let localContext = new DefContext(this.context, this.state);
        this.enterRule(localContext, 6, Stage3BParser.RULE_def);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 95;
            this.match(Stage3BParser.LPAREN);
            this.state = 96;
            this.match(Stage3BParser.DEF);
            this.state = 97;
            this.match(Stage3BParser.IDENTIFIER);
            this.state = 98;
            this.expression();
            this.state = 99;
            this.match(Stage3BParser.RPAREN);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public statement(): StatementContext {
        let localContext = new StatementContext(this.context, this.state);
        this.enterRule(localContext, 8, Stage3BParser.RULE_statement);
        try {
            this.state = 110;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 3, this.context) ) {
            case 1:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 101;
                this.letStar();
                }
                break;
            case 2:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 102;
                this.letStmt();
                }
                break;
            case 3:
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 103;
                this.ifForm();
                }
                break;
            case 4:
                this.enterOuterAlt(localContext, 4);
                {
                this.state = 104;
                this.whileForm();
                }
                break;
            case 5:
                this.enterOuterAlt(localContext, 5);
                {
                this.state = 105;
                this.block();
                }
                break;
            case 6:
                this.enterOuterAlt(localContext, 6);
                {
                this.state = 106;
                this.returnForm();
                }
                break;
            case 7:
                this.enterOuterAlt(localContext, 7);
                {
                this.state = 107;
                this.throwForm();
                }
                break;
            case 8:
                this.enterOuterAlt(localContext, 8);
                {
                this.state = 108;
                this.importForm();
                }
                break;
            case 9:
                this.enterOuterAlt(localContext, 9);
                {
                this.state = 109;
                this.expression();
                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public letStar(): LetStarContext {
        let localContext = new LetStarContext(this.context, this.state);
        this.enterRule(localContext, 10, Stage3BParser.RULE_letStar);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 112;
            this.match(Stage3BParser.LPAREN);
            this.state = 113;
            this.match(Stage3BParser.LETSTAR);
            this.state = 114;
            this.match(Stage3BParser.LPAREN);
            this.state = 118;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 2) {
                {
                {
                this.state = 115;
                this.binding();
                }
                }
                this.state = 120;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 121;
            this.match(Stage3BParser.RPAREN);
            this.state = 125;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 2 || _la === 31 || ((((_la - 32)) & ~0x1F) === 0 && ((1 << (_la - 32)) & 371) !== 0)) {
                {
                {
                this.state = 122;
                this.statement();
                }
                }
                this.state = 127;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 128;
            this.match(Stage3BParser.RPAREN);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public letStmt(): LetStmtContext {
        let localContext = new LetStmtContext(this.context, this.state);
        this.enterRule(localContext, 12, Stage3BParser.RULE_letStmt);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 130;
            this.match(Stage3BParser.LPAREN);
            this.state = 131;
            this.match(Stage3BParser.LET);
            this.state = 132;
            this.match(Stage3BParser.IDENTIFIER);
            this.state = 133;
            this.expression();
            this.state = 134;
            this.match(Stage3BParser.RPAREN);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public ifForm(): IfFormContext {
        let localContext = new IfFormContext(this.context, this.state);
        this.enterRule(localContext, 14, Stage3BParser.RULE_ifForm);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 136;
            this.match(Stage3BParser.LPAREN);
            this.state = 137;
            this.match(Stage3BParser.IF);
            this.state = 138;
            this.expression();
            this.state = 139;
            this.statement();
            this.state = 141;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 2 || _la === 31 || ((((_la - 32)) & ~0x1F) === 0 && ((1 << (_la - 32)) & 371) !== 0)) {
                {
                this.state = 140;
                this.statement();
                }
            }

            this.state = 143;
            this.match(Stage3BParser.RPAREN);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public whileForm(): WhileFormContext {
        let localContext = new WhileFormContext(this.context, this.state);
        this.enterRule(localContext, 16, Stage3BParser.RULE_whileForm);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 145;
            this.match(Stage3BParser.LPAREN);
            this.state = 146;
            this.match(Stage3BParser.WHILE);
            this.state = 147;
            this.expression();
            this.state = 151;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 2 || _la === 31 || ((((_la - 32)) & ~0x1F) === 0 && ((1 << (_la - 32)) & 371) !== 0)) {
                {
                {
                this.state = 148;
                this.statement();
                }
                }
                this.state = 153;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 154;
            this.match(Stage3BParser.RPAREN);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public block(): BlockContext {
        let localContext = new BlockContext(this.context, this.state);
        this.enterRule(localContext, 18, Stage3BParser.RULE_block);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 156;
            this.match(Stage3BParser.LPAREN);
            this.state = 157;
            this.match(Stage3BParser.BEGIN);
            this.state = 161;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 2 || _la === 31 || ((((_la - 32)) & ~0x1F) === 0 && ((1 << (_la - 32)) & 371) !== 0)) {
                {
                {
                this.state = 158;
                this.statement();
                }
                }
                this.state = 163;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 164;
            this.match(Stage3BParser.RPAREN);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public returnForm(): ReturnFormContext {
        let localContext = new ReturnFormContext(this.context, this.state);
        this.enterRule(localContext, 20, Stage3BParser.RULE_returnForm);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 166;
            this.match(Stage3BParser.LPAREN);
            this.state = 167;
            this.match(Stage3BParser.RETURN);
            this.state = 169;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 2 || _la === 31 || ((((_la - 32)) & ~0x1F) === 0 && ((1 << (_la - 32)) & 371) !== 0)) {
                {
                this.state = 168;
                this.expression();
                }
            }

            this.state = 171;
            this.match(Stage3BParser.RPAREN);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public throwForm(): ThrowFormContext {
        let localContext = new ThrowFormContext(this.context, this.state);
        this.enterRule(localContext, 22, Stage3BParser.RULE_throwForm);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 173;
            this.match(Stage3BParser.LPAREN);
            this.state = 174;
            this.match(Stage3BParser.THROW);
            this.state = 175;
            this.expression();
            this.state = 176;
            this.match(Stage3BParser.RPAREN);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public importForm(): ImportFormContext {
        let localContext = new ImportFormContext(this.context, this.state);
        this.enterRule(localContext, 24, Stage3BParser.RULE_importForm);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 178;
            this.match(Stage3BParser.LPAREN);
            this.state = 179;
            this.match(Stage3BParser.IMPORT);
            this.state = 181;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 2) {
                {
                this.state = 180;
                this.objectExpr();
                }
            }

            this.state = 183;
            this.match(Stage3BParser.STRING);
            this.state = 184;
            this.match(Stage3BParser.RPAREN);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public binding(): BindingContext {
        let localContext = new BindingContext(this.context, this.state);
        this.enterRule(localContext, 26, Stage3BParser.RULE_binding);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 186;
            this.match(Stage3BParser.LPAREN);
            this.state = 187;
            this.match(Stage3BParser.IDENTIFIER);
            this.state = 189;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 2 || _la === 31 || ((((_la - 32)) & ~0x1F) === 0 && ((1 << (_la - 32)) & 371) !== 0)) {
                {
                this.state = 188;
                this.expression();
                }
            }

            this.state = 191;
            this.match(Stage3BParser.RPAREN);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public expression(): ExpressionContext {
        let localContext = new ExpressionContext(this.context, this.state);
        this.enterRule(localContext, 28, Stage3BParser.RULE_expression);
        try {
            this.state = 211;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 12, this.context) ) {
            case 1:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 193;
                this.literal();
                }
                break;
            case 2:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 194;
                this.match(Stage3BParser.KEYWORD);
                }
                break;
            case 3:
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 195;
                this.match(Stage3BParser.IDENTIFIER);
                }
                break;
            case 4:
                this.enterOuterAlt(localContext, 4);
                {
                this.state = 196;
                this.lambda();
                }
                break;
            case 5:
                this.enterOuterAlt(localContext, 5);
                {
                this.state = 197;
                this.assign();
                }
                break;
            case 6:
                this.enterOuterAlt(localContext, 6);
                {
                this.state = 198;
                this.objectExpr();
                }
                break;
            case 7:
                this.enterOuterAlt(localContext, 7);
                {
                this.state = 199;
                this.arrayExpr();
                }
                break;
            case 8:
                this.enterOuterAlt(localContext, 8);
                {
                this.state = 200;
                this.propAccess();
                }
                break;
            case 9:
                this.enterOuterAlt(localContext, 9);
                {
                this.state = 201;
                this.indexAccess();
                }
                break;
            case 10:
                this.enterOuterAlt(localContext, 10);
                {
                this.state = 202;
                this.quasiquote();
                }
                break;
            case 11:
                this.enterOuterAlt(localContext, 11);
                {
                this.state = 203;
                this.unquote();
                }
                break;
            case 12:
                this.enterOuterAlt(localContext, 12);
                {
                this.state = 204;
                this.unquoteSplicing();
                }
                break;
            case 13:
                this.enterOuterAlt(localContext, 13);
                {
                this.state = 205;
                this.ternary();
                }
                break;
            case 14:
                this.enterOuterAlt(localContext, 14);
                {
                this.state = 206;
                this.condExpr();
                }
                break;
            case 15:
                this.enterOuterAlt(localContext, 15);
                {
                this.state = 207;
                this.newForm();
                }
                break;
            case 16:
                this.enterOuterAlt(localContext, 16);
                {
                this.state = 208;
                this.optChain();
                }
                break;
            case 17:
                this.enterOuterAlt(localContext, 17);
                {
                this.state = 209;
                this.nullCoalesce();
                }
                break;
            case 18:
                this.enterOuterAlt(localContext, 18);
                {
                this.state = 210;
                this.call();
                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public lambda(): LambdaContext {
        let localContext = new LambdaContext(this.context, this.state);
        this.enterRule(localContext, 30, Stage3BParser.RULE_lambda);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 213;
            this.match(Stage3BParser.LPAREN);
            this.state = 214;
            this.match(Stage3BParser.LAMBDA);
            this.state = 215;
            this.fnSignature();
            this.state = 219;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 2 || _la === 31 || ((((_la - 32)) & ~0x1F) === 0 && ((1 << (_la - 32)) & 371) !== 0)) {
                {
                {
                this.state = 216;
                this.statement();
                }
                }
                this.state = 221;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 222;
            this.match(Stage3BParser.RPAREN);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public assign(): AssignContext {
        let localContext = new AssignContext(this.context, this.state);
        this.enterRule(localContext, 32, Stage3BParser.RULE_assign);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 224;
            this.match(Stage3BParser.LPAREN);
            this.state = 225;
            this.match(Stage3BParser.SET);
            this.state = 226;
            this.match(Stage3BParser.IDENTIFIER);
            this.state = 227;
            this.expression();
            this.state = 228;
            this.match(Stage3BParser.RPAREN);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public ternary(): TernaryContext {
        let localContext = new TernaryContext(this.context, this.state);
        this.enterRule(localContext, 34, Stage3BParser.RULE_ternary);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 230;
            this.match(Stage3BParser.LPAREN);
            this.state = 231;
            this.match(Stage3BParser.TERNARY);
            this.state = 232;
            this.expression();
            this.state = 233;
            this.expression();
            this.state = 234;
            this.expression();
            this.state = 235;
            this.match(Stage3BParser.RPAREN);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public condExpr(): CondExprContext {
        let localContext = new CondExprContext(this.context, this.state);
        this.enterRule(localContext, 36, Stage3BParser.RULE_condExpr);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 237;
            this.match(Stage3BParser.LPAREN);
            this.state = 238;
            this.match(Stage3BParser.COND);
            this.state = 242;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            do {
                {
                {
                this.state = 239;
                this.expression();
                this.state = 240;
                this.expression();
                }
                }
                this.state = 244;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            } while (_la === 2 || _la === 31 || ((((_la - 32)) & ~0x1F) === 0 && ((1 << (_la - 32)) & 371) !== 0));
            this.state = 246;
            this.match(Stage3BParser.RPAREN);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public newForm(): NewFormContext {
        let localContext = new NewFormContext(this.context, this.state);
        this.enterRule(localContext, 38, Stage3BParser.RULE_newForm);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 248;
            this.match(Stage3BParser.LPAREN);
            this.state = 249;
            this.match(Stage3BParser.NEW);
            this.state = 250;
            this.match(Stage3BParser.IDENTIFIER);
            this.state = 254;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 2 || _la === 31 || ((((_la - 32)) & ~0x1F) === 0 && ((1 << (_la - 32)) & 371) !== 0)) {
                {
                {
                this.state = 251;
                this.expression();
                }
                }
                this.state = 256;
                this.errorHandler.sync(this);
